--- a/stemming_uitslag.html
+++ b/stemming_uitslag.html
@@ -1,1 +1,66 @@
-<h1>Stemresultaten</h1><h2>Lijst 1</h2><ul><li>Natalie Rowe: 0 stemmen</li><li>James Gonzalez: 0 stemmen</li><li>Jason Payne: 0 stemmen</li><li>Christina Henderson: 0 stemmen</li><li>Edward Murphy: 0 stemmen</li><li>Tiffany Collins: 0 stemmen</li><li>Christina Campbell: 0 stemmen</li><li>Kathleen Lynch: 0 stemmen</li><li>Wendy Kelly: 0 stemmen</li><li>Todd Wagner: 0 stemmen</li></ul><h2>Lijst 2</h2><ul><li>Kristi Cook: 0 stemmen</li><li>Michael Lewis: 0 stemmen</li><li>Leslie Brooks: 0 stemmen</li><li>Joe Snyder: 0 stemmen</li><li>Jessica Anderson: 0 stemmen</li><li>Adrian Costa: 0 stemmen</li><li>Autumn Lee: 0 stemmen</li><li>Kayla Webster: 0 stemmen</li><li>Kathleen Jones: 0 stemmen</li><li>Raymond Holloway: 0 stemmen</li></ul><h2>Lijst 3</h2><ul><li>Lee Watts: 0 stemmen</li><li>Samantha Wilson: 0 stemmen</li><li>Gabriel Hogan: 0 stemmen</li><li>Amanda Owens: 0 stemmen</li><li>Timothy Russo: 0 stemmen</li><li>Tom Hamilton: 0 stemmen</li><li>Deborah Solomon: 0 stemmen</li><li>Holly King: 0 stemmen</li><li>Kaitlin Williams: 0 stemmen</li><li>Leslie Brooks: 0 stemmen</li></ul><h2>Lijst 4</h2><ul><li>Kevin Butler: 0 stemmen</li><li>Tyler Lewis: 0 stemmen</li><li>Hayley Morgan: 0 stemmen</li><li>Melanie James: 0 stemmen</li><li>Toni Savage: 0 stemmen</li><li>Corey Hernandez: 0 stemmen</li><li>Elizabeth Gonzalez: 0 stemmen</li><li>Vincent Green: 0 stemmen</li><li>Tina Hickman: 0 stemmen</li><li>Deanna Cummings: 0 stemmen</li></ul><h2>Lijst 5</h2><ul><li>Mallory Gray: 0 stemmen</li><li>Daniel Anderson: 0 stemmen</li><li>Cynthia Lewis: 0 stemmen</li><li>Claire Long: 0 stemmen</li><li>Donald Jackson: 0 stemmen</li><li>Andrea Gomez: 0 stemmen</li><li>Gregory Ferguson: 0 stemmen</li><li>Ryan Martinez: 0 stemmen</li><li>Alejandro Murillo: 0 stemmen</li><li>Vanessa Orr: 0 stemmen</li></ul>
+<h1>Stemresultaten</h1>
+<h2>Lijst 1</h2>
+<ul>
+  <li>Paul Shaw: 0 stemmen</li>
+  <li>Jessica Griffin: 0 stemmen</li>
+  <li>William Boyd: 0 stemmen</li>
+  <li>Anthony Preston: 0 stemmen</li>
+  <li>Andrew Johnson: 0 stemmen</li>
+  <li>Shelby Boyd: 0 stemmen</li>
+  <li>Steven Hunter: 0 stemmen</li>
+  <li>Angela Weaver: 0 stemmen</li>
+  <li>Gary Eaton: 0 stemmen</li>
+  <li>Suzanne Young: 0 stemmen</li>
+</ul>
+<h2>Lijst 2</h2>
+<ul>
+  <li>Calvin Smith: 0 stemmen</li>
+  <li>Melanie Chen: 0 stemmen</li>
+  <li>Michael Cruz: 0 stemmen</li>
+  <li>Susan Jones: 0 stemmen</li>
+  <li>Robin Franco: 0 stemmen</li>
+  <li>William Williams: 0 stemmen</li>
+  <li>Christine Dodson: 0 stemmen</li>
+  <li>Marissa Stevens: 0 stemmen</li>
+  <li>Wendy Sandoval: 0 stemmen</li>
+  <li>Brenda Marsh: 0 stemmen</li>
+</ul>
+<h2>Lijst 3</h2>
+<ul>
+  <li>Michelle Lowe: 0 stemmen</li>
+  <li>Noah Norris: 0 stemmen</li>
+  <li>Michael Booth: 0 stemmen</li>
+  <li>Amy Duncan: 0 stemmen</li>
+  <li>Kristen Rojas: 0 stemmen</li>
+  <li>Morgan Beard: 0 stemmen</li>
+  <li>Dale Long: 0 stemmen</li>
+  <li>Claudia Turner: 0 stemmen</li>
+  <li>Carol Smith: 0 stemmen</li>
+  <li>Kirsten Howe: 0 stemmen</li>
+</ul>
+<h2>Lijst 4</h2>
+<ul>
+  <li>Lindsey Stevens: 0 stemmen</li>
+  <li>Stephen Black: 0 stemmen</li>
+  <li>Kirsten Baldwin: 0 stemmen</li>
+  <li>Levi Griffin: 0 stemmen</li>
+  <li>Jennifer Allen: 0 stemmen</li>
+  <li>Sarah Price: 0 stemmen</li>
+  <li>Mark Waters: 0 stemmen</li>
+  <li>Teresa Simmons: 0 stemmen</li>
+  <li>Jose Hardin: 0 stemmen</li>
+  <li>Lisa Goodman: 0 stemmen</li>
+</ul>
+<h2>Lijst 5</h2>
+<ul>
+  <li>Adam Knox: 0 stemmen</li>
+  <li>Jason Wu: 0 stemmen</li>
+  <li>Gregory Allen: 0 stemmen</li>
+  <li>Rhonda Washington: 0 stemmen</li>
+  <li>John Soto: 0 stemmen</li>
+  <li>Sara Fisher: 0 stemmen</li>
+  <li>Stacey Charles: 0 stemmen</li>
+  <li>Robert Harrell: 0 stemmen</li>
+  <li>Stephanie Chavez: 0 stemmen</li>
+  <li>Candice Casey: 0 stemmen</li>
+</ul>
